Separate texture manual. Separate experiment. Consolidate and systematize.

--- a/tutorials.html
+++ b/tutorials.html
@@ -95,7 +95,7 @@
    <a href="http://fmi.usm.md/ro/ExamenLicenta">USM Examen Licenta</a> <br/>
    <a href="C:/Users/filip/OneDrive/Desktop/Work/3D/TipovaFormate/obj/Felicia-Ionescu-Programarea-aplicatiilor-grafice.pdf">HDD Local, Felicia Ionescu: Programarea aplicatiilor grafice</a> <br/>
    <a href="https://www.geogebra.org/">GeoGebra</a> <br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a><br/>
    <!--
    for most samples webgl-utils only provides shader compiling/linking and
    canvas resizing because why clutter the examples with code that's the same in every sample.
@@ -104,7 +104,10 @@
    for webgl-utils, m3, m4, and webgl-lessons-ui.
    -->
    <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-data-textures.html">Texture 2, Data Textures manual</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-textures.html">texture 1, manual</a><br/>
+   script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js" /script<br/>
+   img/video/file? crossorigin="anonymous"<br/> 
 
 </body>
 </html>
