--- a/textureManual.html
+++ b/textureManual.html
@@ -1,9 +1,149 @@
-TODO: make it project style<br/>
-TWGL Texture Sample, with 3D Letter F and 3D text<br/>
-<canvas id="canvas"></canvas>
+<html>
+<head>
+   <title>Texture Manual 2, data textures</title>
+   <!-- TODO: unused webgl-utils? Make it local if used -->
+   <!-- TODO: unused m4 source review (copyright included) -->
+   <!-- script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script -->
+   <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
+   <script src="./lib/js/general/api.js"></script>
+   <script src="./lib/js/math/3dmath.js"></script>
+   <script src="./lib/js/gl2js/glcanvas.js"></script>
+</head>
+<body>
+   <div class="sample">
+      Cube with texture pixels<br/>
+      <canvas id="CubeBWTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec4 a_position;
+            attribute vec2 a_texcoord;
+            uniform mat4 u_matrix;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = u_matrix * a_position;
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            uniform sampler2D b_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual/textureCube.js"></script>
+      </canvas>
+   </div>
+   <div class="sample">
+      Just texture<br/>
+      <canvas id="SquareBWTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec2 a_position;
+            attribute vec2 a_texcoord;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = vec4(a_position, 0, 1);
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual/texture.strip.js"></script>
+      </canvas>
+   </div><br/>
+   <div class="sample">
+      Texture only, from pixels<br/>
+      <canvas id="SquareCanvTextureMap" width = "200" height = "200">
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec2 a_position;
+            attribute vec2 a_texcoord;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = vec4(a_position, 0, 1); // Yet must be a vec4
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual/texture.strip.canv.js"></script>
+      </canvas>
+   </div><br/>
+   <div class="sample">
+      Texture only from element (canvas/div/img)<br/>
+      <canvas id="SquareCanvTextureMap" width = "200" height = "200">
+         <script type="text/glsl-shader" data-gl-type="vertex-shader" data-gl-program="texture">
+            #version 300 es
+            in vec2 a_position;
+            in vec2 a_texcoord;
+            out vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = vec4 (a_position, 0, 1); // Yet must be a vec4
+               v_texcoord = a_texcoord;
+            }
+         </script>
+         <script type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-program="texture">
+            #version 300 es
+            precision highp float;
+            in vec2 v_texcoord;
+            uniform sampler2D u_texture;
+            out vec4 outColor;
+            void main()
+            {
+               outColor = texture(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual/texture.strip.canv.glsl300.js"></script>
+      </canvas>
+   </div><br/>
+   <div class="sample">
+      Texture will work only under HTTP<br/>
+      <canvas id="FSimpleObjectWidhTexture" width="400" height = "300">
+         This will work only under HTTP.
+         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
+            attribute vec4 a_position;
+            attribute vec2 a_texcoord;
+            uniform mat4 u_matrix;
+            varying vec2 v_texcoord;
+            void main()
+            {
+               gl_Position = u_matrix * a_position;
+               v_texcoord  = a_texcoord;
+            }
+         </script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
+            precision mediump float;
+            varying vec2 v_texcoord; // Passed in from the vertex shader.
+            uniform sampler2D u_texture; // The texture.
+            void main()
+            {
+               gl_FragColor = texture2D(u_texture, v_texcoord);
+            }
+         </script>
+         <script src="./textureManual/textureCapitalFImg.js"></script>
+      </canvas>
+   </div><br/>
+   <a href="./tutorials.html">Tutorials</a>
 
-<script src="./3rdparty/twgl/js/twgl-full.v6.1.0.js"></script> <!-- copied from https://twgljs.org/dist/6.x/twgl-full.js, copyright included -->
-<script src="./3rdparty/twgl/js/m4.js"></script>
-<script src="./textureManual/textureManualShaders.js"></script>
-<script src="./textureManual/textureManual.js"></script>
-<a href="./tutorials.html">Tutorials</a>
+
+</body>
+</html>
