--- a/experiment.html
+++ b/experiment.html
@@ -1,6 +1,7 @@
 <html>
 <head>
    <title>Texture Manual 1, basic</title>
+   <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/general/api.js"></script>
 </head>
 <body>
@@ -11,12 +12,14 @@
       <script>document.getElementById('video1').play();</script>
       <source src="./3rdparty/video/flower.mp4" type="video/mp4">
    </video><br/>
+
    <!-- crossorigin="anonymous" -->
    TODO: To investigate duplication of hidden element<br/>
    img id="imgBasic", duplicate, hiding will lead to failure:<br/><img id="imgBasic"  src="./3rdparty/texture/f-texture.png" /><br>
    Tipova:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
-
    <a href="./tutorials.html">Tutorials</a>
+
+           <!-- crossorigin="anonymous" -->
 
 </body>
 </html>
