--- a/heightMap.html
+++ b/heightMap.html
@@ -56,18 +56,18 @@
       <script  src="./heightMap/heightMap.uiproxy.js"></script>
 
    </canvas><!-- br/ -->
+   <div  class="sample">
+      This actually works, offscreen canvas, load shaders by URL<br/>
+      Uncomment canvas to use it<br/>
+      TODO: Investigate big performance problems<br/>
+      <canvas  class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
+         <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
+         <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
+         <script src="./heightMap/heightMap.uiproxy.js"></script>
+      </canvas><!-- br/ -->
+   </div><br/>
    <br/>
-   <div class="sample">
-      Show some static resources<br/>
-      <video id="video"  height="90" width="160" src="./3rdparty/video/flower.mp4" autoplay muted loop  > </video>
-      <video id="video1" height="90" width="160" autoplay muted loop>
-         <script>document.getElementById('video1').play();</script>
-         <source src="./3rdparty/video/flower.mp4" type="video/mp4">
-      </video><br/>
-      <!-- crossorigin="anonymous" -->
-      base:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
-      Tipova Big Heigth Map:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
-   </div>
+
    <a href="./tutorials.html">Tutorials</a>
 
 
