--- a/objFile.html
+++ b/objFile.html
@@ -5,15 +5,13 @@
 <body>
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./3rdparty/js/OBJFile.js"></script> <!-- cloned from "https://github.com/WesUnwin/obj-file-parser", copyright included -->
-   <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
 
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-   <script src="./lib/js/gl2js/glcontroller.js"></script>
 
    <div class="sample">
-      Simple draw indexed:<br/>
+      Simple draw indexed, for further obj usage:<br/>
       <canvas id = "simpleDrawIndexed"  width = "400" height = "300" class="blue">
          <script src="./objFile/simpleDrawIndexed.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
@@ -35,103 +33,13 @@
          </script>
       </canvas>
    </div> <br/>
-   <div  class="sample">
-      TODO: Unclear purpose. Not finished.<br/>
-      TODO: No consumer for this canvas: ID UShowTexture<br/>
-      TODO: copy/pasted F Shape (from twgl, webgl2fundamentals.org)<br/>
-      <!-- canvas id="UShowTexture" width="400" height = "300">
-         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
-            attribute vec4 a_position; //a_texcoord
-            attribute vec2 a_texcoord;
-            varying vec2 v_texcoord;
-            layout (location = 0) in  vec2 coordinates;
-            void main(void)
-            {
-               gl_Position = vec4(coordinates, 0.0, 1.0);
-               v_texcoord  = a_texcoord;
-            }
-         </script>
-         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
-            precision mediump float;
-            varying vec2 v_texcoord; // Passed in from the vertex shader.
-            uniform sampler2D u_texture; // The texture.
-            void main()
-            {
-               gl_FragColor = texture2D(u_texture, v_texcoord);
-            }
-         </script>
-      </canvas -->
-   </div><br/>
-   <div  class="sample">
+
+   <div class="sample">
       TODO: using3DObjFile.js successfully loads 3D Obj files<br/>
       TODO: Make it meaningfull<br/>
       <script src="./objFile/using3DObjFile.js"></script>
    </div><br/>
-   <div  class="sample">
-      This actually works, but to be rethinked<br/>
-      TODO: to separate (?); external HeightMapButuceniOffscreen<br/>
-      in heightMap.uiproxy.js::enable by uncomment js and html<br/>
-      TODO: Investigate big performance problems<br/>
-      <!-- canvas  class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
-         <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
-            #version 300 es
-            layout (location = 0) in vec3 vert;
-            layout (location = 1) in vec3 norm;
-            layout (location = 2) in vec4 vertColor;
 
-            out vec4 terrainColor;
-            out vec3 terrainNormal;
-            out vec3 lightDirection;
-
-            uniform mat4 model;      //takes local coordinates for thing and moves it into world coordinates
-            uniform mat4 view;       //moves world space objects around based on camera
-            uniform mat4 projection; //converts values to normalised device coordinates (use sweet math for perspective)
-
-            void main()
-            {
-               gl_Position = projection * view * model * vec4(vert, 1.0);
-               terrainColor  = vertColor;
-               terrainNormal = norm;
-               lightDirection = vec3(0.f, -1., 0.);
-            }
-         </script>
-         <script  type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            in vec4 terrainColor;
-            in vec3 terrainNormal;
-            in vec3 lightDirection;
-            out vec4 FragColor;
-            void main()
-            {
-               float strength = dot(normalize(-lightDirection), normalize(terrainNormal)) * 1.2;//* 0.75;//1.0;//0.75;//
-               FragColor = vec4( terrainColor.rgb * strength, terrainColor.a);
-            }
-         </script>
-      </canvas -->
-   </div><br/>
-   <div  class="sample">
-      This actually works, offscreen canvas, load shaders by URL<br/>
-      Uncomment canvas to use it<br/>
-      TODO: Investigate big performance problems<br/>
-      <!-- canvas  class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./objFile/height-map.vs" ></script>
-         <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./objFile/height-map.fs" ></script>
-         <script src="./objFile/heightMap.uiproxy.js"></script>
-      </canvas  --><!-- br/ -->
-   </div><br/>
-   <br/>
-   <div  class="sample">
-      Statically view some media resources<br/>
-      <video id="video"  height="90" width="160" src="./3rdparty/video/flower.mp4" autoplay muted loop  > </video>
-      <video id="video1" height="90" width="160" autoplay muted loop>
-         <script>document.getElementById('video1').play();</script>
-         <source src="./3rdparty/video/flower.mp4" type="video/mp4">
-      </video><br/>
-      <!-- crossorigin="anonymous" -->
-      Basic Letter F Texture:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
-      Tipova big WB Heigth Map, actually good (commented):<br/><img id="imgTipova" src="./lib/heightmap/tipova.png" /><br/>
-   </div><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
 </html>
