Eliminate noise duplication of code

--- a/experiment.html
+++ b/experiment.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>Texture Manual 1, basic</title>
+   <title>Experiments JS for experiments</title>
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/general/api.js"></script>
 </head>
