--- a/heightMap.html
+++ b/heightMap.html
@@ -1,18 +1,19 @@
 <html>
 <head>
    <title>Height map 1, basic</title>
-</head>
-<body>
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./3rdparty/twgl/js/m4.js"></script> <!-- copied from "https://twgljs.org/dist/3.x/twgl-full.min.js", copyright included -->
    <script src="./lib/js/general/api.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/gl2js/glcontroller.js"></script>
+</head>
+<body>
    <div class="sample">
       TODO: Big performance issues with offscreen canvas, to investigate
    </div><br/>
    <canvas class="green" id="HeightMapButuceni" width="400" height = "300">
+      Height map, no texture, no framebuffer<br/>
       <script  type="text/glsl-shader"   data-gl-type="vertex-shader">
          #version 300 es
          layout (location = 0) in vec3 vert;
@@ -50,22 +51,15 @@
       </script>
 	   <script src="./heightMap/heightMap.js"></script>
    </canvas><br/>
-   <canvas class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
-      <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
-      <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
-      <script  src="./heightMap/heightMap.uiproxy.js"></script>
-
-   </canvas><!-- br/ -->
    <div  class="sample">
-      This actually works, offscreen canvas, load shaders by URL<br/>
-      Uncomment canvas to use it<br/>
+      Offscreen heightmap, no texture, no framebuffer<br/>
       TODO: Investigate big performance problems<br/>
-      <canvas  class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
+      <canvas class="green" id="HeightMapButuceniOffscreen" width="400" height = "300">
          <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./heightMap/height-map.vs" ></script>
          <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./heightMap/height-map.fs" ></script>
-         <script src="./heightMap/heightMap.uiproxy.js"></script>
+         <script  src="./heightMap/heightMap.uiproxy.js"></script>
       </canvas><!-- br/ -->
-   </div><br/>
+   </div>
    <br/>
 
    <a href="./tutorials.html">Tutorials</a>
