--- a/draw.simple.1.glsl300.vao.html
+++ b/draw.simple.1.glsl300.vao.html
@@ -7,6 +7,8 @@
       
 </head>
 <body>
+   A WebGPU variant <a href="./webgpu1.html">available</a><br/>
+   The WebGL with VAO migrated from <a href="./draw.simple.1.glsl300.html">WebGL</a><br/>
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw0"  width = "120" height = "120" class="blue">
@@ -30,7 +32,7 @@
             }
          </script>
       </canvas>
-   </div>
+   </div><br/>
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw"  width = "120" height = "120" class="blue">
