--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -4,33 +4,17 @@
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/math/3dmath.js"></script>
-      
 </head>
 <body>
+   The WebGL migrated to <a href="./webgpu1.html">WebGPU</a><br/>
+   The WebGL migrated to <a href="./draw.simple.1.glsl300.vao.html">WebGL with VAO</a><br/>
    <div class="sample">
-      Simple draw:<br/>
-      <canvas id = "draw0"  width = "120" height = "120" class="blue">
-         <script src="./draw.simple.1.glsl300/draw0.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec2 coordinates; //layout (location = 10) in vec2 coordinates
-            void main(void)
-            {
-               gl_Position = vec4(coordinates, 0.0, 1.0);
-               //gl_PointSize = 10.0;\n' +
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            out vec4 buzzColor;
-            void main(void)
-            {
-               buzzColor = vec4(0.0, 0.0, 0.0, 0.1);
-            }
-         </script>
+      WebGL Very Simple<br/>
+      Color background<br/>
+      <canvas id = "mycanvas2"  width="120" height="120"  class="green">
+         <script src="./draw.simple.1.glsl300/simple.js"></script>
       </canvas>
-   </div>
+   </div><br/>
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw"  width = "120" height = "120" class="blue">
@@ -56,15 +40,34 @@
       </canvas>
    </div>
    <div class="sample">
+      Simple draw indexed:<br/>
+      <canvas id = "simpleDrawIndexed"  width = "120" height = "120" class="blue">
+         <script src="./draw.simple.1.glsl300/simpleDrawIndexed.js"></script>
+         <script type="text/glsl-shader" data-gl-type="vertex-shader">
+            attribute vec2 coordinates;
+            void main(void)
+            {
+               gl_Position = vec4(coordinates, 0.0, 1.0);
+            }
+         </script>
+         <script type="text/glsl-shader" data-gl-type="fragment-shader">
+            void main(void)
+            {
+               gl_FragColor = vec4(1.0, 0.0, 1.0, 0.5);
+            }
+         </script>
+      </canvas>
+   </div>
+   <div class="sample">
       Translate:<br/>
       <canvas id = "translate"  width = "120" height = "120" class="yellow" >
          <script src="./draw.simple.1.glsl300/translate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
+            in vec4 coordinate;
             void main(void)
             {
-               gl_Position = coordinates + vec4(0.5, 0.5, 0.0, 0.0);
+               gl_Position = coordinate + vec4(0.5, 0.5, 0.0, 0.0);
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
@@ -77,7 +80,7 @@
             }
          </script>
       </canvas>
-   </div>
+   </div><br/>
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
@@ -195,14 +198,14 @@
          <script src="./draw.simple.1.glsl300/triangle_fan.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
+            layout (location = 0) in vec4 coordinates;
+            layout (location = 1) in vec3 inputNormal;
 			
-            out vec3 nm;
+            out vec3 normal;
             void main()
             {
                gl_Position = coordinates;
-               nm = inputNormal;
+               normal = inputNormal;
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
@@ -210,10 +213,13 @@
             precision mediump float;
             out vec4 fragColor;
 
-            in vec3 nm;
-            void main() 
+            in vec3 normal; //always [0, 1, 1], excepting the tip [0.0, 0.0, 1.0]
+
+            const vec3 lightdirection    = vec3 (0.0, -1.0, 0.0); //directed in perpendicularly down
+            const vec4 dotlightdirection = vec4 (-lightdirection, 1); //for multiplication
+            void main()
             {
-              fragColor = vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(nm, 0.9);
+              fragColor = dotlightdirection * vec4(normal, 0.9);
             }
          </script>
       </canvas>
@@ -441,7 +447,6 @@
    </div>
    <br/>
    <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./draw.simple.1.glsl300/2d.js"    ></script></canvas>
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./draw.simple.1.glsl300/simple.js"></script></canvas><br/>
    <a href="./tutorials.html">Tutorials</a>
 
 
