--- a/webgpu1.html
+++ b/webgpu1.html
@@ -1,30 +1,41 @@
 <html>
 <head>
    <title>webgpu test</title>
-   <link rel="stylesheet" href="./lib/css/default.css">
+   <link   rel="stylesheet" href="./lib/css/default.css"></link>
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
    <script src="./lib/js/gpujs/gpucanvas.js"></script>
    <script src="./lib/js/experiment/experiment.js"></script>
 </head>
 <body>
+   This WebGPU sample migrated from <a href="./draw.simple.1.glsl300.html">this WebGL</a><br/>
+   Same WebGL <a href="./draw.simple.1.glsl300.html">using VAO</a><br/>
    <div class="sample">
-      WebGPU triangle 1:<br/>
-      <canvas id="gpuCanvas" width="160" height="120">
-        <script src="./webgpu1/webgpu1.js" defer=""></script>
-        <script>
-           document.addEventListener("wheel", (event) =>
-            {
-               if (event.ctrlKey)
-                  event.preventDefault();
-            });
-        </script>
+      WebGPU very simple<br/>
+      Color background<br/>
+      <canvas width="120" height="120" class="green">
+         <script src="./webgpu1/webgpuSimple.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      WebGPU triangle 2:<br/>
-      <canvas id="gpuCanvas" width="160" height="120">
-        <script src="./webgpu1/webgpu2.js" defer=""></script>
+      WebGPU triangle 1:<br/>
+      <canvas width="160" height="120">
+         <script src="./webgpu1/webgpuBasic.js" defer=""></script>
+      </canvas>
+   </div>
+   <div class="sample">
+      WebGPU triangle:<br/>
+      Multiple Buffers<br/>
+      <canvas width="160" height="120">
+         <script src="./webgpu1/webgpuMultipleBuffers.js" defer=""></script>
+      </canvas>
+   </div>
+   <div class="sample">
+      WebGPU triangle<br/>
+      Try Classes:<br/>
+      html/script shaders<br/>
+      <canvas width="160" height="120">
+        <script src="./webgpu1/webgpuTryClasses.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -36,7 +47,7 @@
             {
                var output : VertexOut;
                output.position = position;
-               output.color = color;
+               output.color    = color;
                return output;
             }
             @fragment
@@ -46,86 +57,121 @@
             }
         </script>
       </canvas>
-   </div>
-   hello
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./webgpu1/simple.js"></script></canvas><br/>
+   </div><br/>
    <div class="sample">
       Simple draw:<br/>
-      <canvas id = "simpleDraw"  width = "120" height = "120" class="blue">
-         <script src="./webgpu1/simpleDraw.js"></script>
-         <script type="text/glsl-shader" data-gl-type="vertex-shader">
-            attribute vec2 coordinates;
-            void main(void)
+      <canvas width="120" height="120" class="blue">
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
             {
-               gl_Position = vec4(coordinates, 0.0, 1.0);
-               //gl_PointSize = 10.0;\n' +
+               @builtin(position) position : vec4f,
             }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            void main(void)
+            @vertex
+            fn vertex_main(@location(0) position: vec2f) -> VertexOut
             {
-               gl_FragColor = vec4(0.0, 1.0, 1.0, 0.5);
+               var ret : VertexOut;
+               ret.position = vec4f(position, 0, 1);
+               return ret;
             }
-         </script>
+            @fragment
+            fn fragment_main() -> @location(0) vec4f
+            {
+               //return vec4f(0.0, 1.0, 1.0, 0.5); //keep it as of now
+               return vec4f(0.0, 0.0, 0.0, 0.1);
+            }
+        </script>
+         <script src="./webgpu1/webgpuSimpleDraw.js"></script>
       </canvas>
    </div>
    <div class="sample">
       Simple draw indexed:<br/>
-      <canvas id = "simpleDrawIndexed"  width = "120" height = "120" class="blue">
-         <script src="./webgpu1/simpleDrawIndexed.js"></script>
-         <script type="text/glsl-shader" data-gl-type="vertex-shader">
-            attribute vec2 coordinates;
-            void main(void)
+      <canvas id="simpleDrawIndexed"  width="120" height="120" class="blue">
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
             {
-               gl_Position = vec4(coordinates, 0.0, 1.0);
+               @builtin(position) position : vec4f,
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec2f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = vec4f(position, 0, 1);
+               return ret;
+            }
+            @fragment
+            fn fragment_main() -> @location(0) vec4f
+            {
+               return vec4f(1.0, 0.0, 1.0, 0.5);
             }
          </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            void main(void)
-            {
-               gl_FragColor = vec4(1.0, 0.0, 1.0, 0.5);
-            }
-         </script>
+         <script src="./webgpu1/webgpuSimpleDrawIndexed.js"></script>
       </canvas>
    </div>
    <div class="sample">
       Translate:<br/>
-      <canvas id = "translate"  width = "120" height = "120" class="yellow" >
-         <script src="./webgpu1/translate.js"></script>
-         <script type="text/glsl-shader" data-gl-type="vertex-shader">
-            attribute vec4 coordinates;
-            void main(void)
+      <canvas id="translate"  width="120" height="120" class="yellow">
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
             {
-               gl_Position = coordinates + vec4(0.5, 0.5, 0.0, 0.0);
+               @builtin(position) position : vec4f,
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec4f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = position + vec4f(0.5, 0.5, 0.0, 0.0);
+               return ret;
+            }
+            @fragment
+            fn fragment_main() -> @location(0) vec4f
+            {
+               return vec4f(0.0, 1.0, 0.0, 1.0);
             }
          </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            void main(void)
-            {
-               gl_FragColor = vec4(0.0, 1.0, 0.0, 1.0);
-            }
-         </script>
+         <script src="./webgpu1/webgpuTranslate.js"></script>
       </canvas>
    </div><br/>
    <!-- Go big for screen snippets -->
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "360" height = "360" class="cyan">
-         <script src="./webgpu1/animate.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
-             attribute vec4 coordinates;
+             attribute vec4 coordinate;
              uniform   vec4 translation;
              void main(void)
              {
-                gl_Position = coordinates + translation;
+                gl_Position = coordinate + translation;
              }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             void main(void)
             {
-               gl_FragColor = vec4(0.0, 0.0, 0.0, 0.1);
+               gl_FragColor = vec4 (0.0, 0.0, 0.0, 0.1);
             }
          </script>
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VSUniforms {
+               translation: vec4f,
+            };
+            @group(0) @binding(0) var<uniform> vsUniforms: VSUniforms;
+            struct VertexOut
+            {
+               @builtin(position) position : vec4f,
+            }
+            @vertex
+            fn vertex_main (@location(0) position: vec3f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = vec4f (position, 1) + vsUniforms.translation;
+               return ret;
+            }
+            @fragment
+            fn fragment_main () -> @location(0) vec4f
+            {
+               return vec4f(0.0, 0.0, 0.0, 0.1);
+            }
+         </script>
+         <script src="./webgpu1/webgpuAnimate.js"></script>
       </canvas>
    </div>
    <div class="sample">
