--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -16,8 +16,10 @@
    <script src="./lib/js/gl2js/glcontroller.js"></script>
 
    <div class="sample">
-      Render to Texture<br/>
+      Render to Texture, OnScreen<br/>
+      With keyboard/mouse interaction<br/>
       TODO: texture inversed, to investigate<br/>
+      Under HTTP only<br/>
       <canvas id="CraterArizonaToFramebuffer" width="320" height = "240">
          <!-- This is main target -->
          <script  type="text/glsl-shader"   data-gl-type="vertex-shader" data-gl-program="sampleDrawIndexed">
@@ -82,12 +84,13 @@
       </canvas>
    </div><br/>
    <div class="sample">
-      Render to Offscreen Canvas in worker<br/>
+      Render to Texture, Offscreen<br/>
+      With keyboard/mouse interaction<br/>
+      Under HTTP Only<br/>
       <canvas id="HeightMapButuceniOffscreen" width="400" height = "300">
          <script  type="text/glsl-shader" data-gl-type="vertex-shader"   data-gl-src="./renderToTexture/height-map.vs" ></script>
          <script  type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-src="./renderToTexture/height-map.fs" ></script>
          <script src="./renderToTexture/renderToTexture.uiproxy.js"></script>
-   
       </canvas><!-- br/ -->
    </div>
    <br/>
