--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/math/3dmath.js"></script>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
-
+   <script src="./lib/js/gl2js/gldynamic.js"></script>
 </head>
 <body>
    A WebGPU variant <a href="./webgpu1.html">available</a><br/>
@@ -13,24 +13,6 @@
       Simple draw:<br/>
       <canvas id = "draw0"  width = "120" height = "120" class="blue">
          <script src="./draw.simple.1.glsl300.vao.auto/draw0.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            layout (location = 0) in vec2 coordinates;
-            void main(void)
-            {
-               gl_Position = vec4(coordinates, 0.0, 1.0);
-               //gl_PointSize = 10.0;\n' +
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            out vec4 buzzColor;
-            void main(void)
-            {
-               buzzColor = vec4(0.0, 0.0, 0.0, 0.1);
-            }
-         </script>
       </canvas>
    </div><br/>
    <div class="sample">
