--- a/textureTextCapitalF.html
+++ b/textureTextCapitalF.html
@@ -183,7 +183,7 @@
       TWGL Sample Stripped Of Capital F<br/>
       Direct draw of texture text<br/>
       <canvas class="green" width = "300" height = "300" >
-         <script type="text/glsl-shader" data-gl-type="vertex-shader"  data-gl-program="texture">
+         <script type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 a_position;
             in vec2 a_texcoord;
@@ -195,7 +195,7 @@
                v_texcoord = a_texcoord;
             }
          </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader" data-gl-program="texture">
+         <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision highp float;
             in vec2 v_texcoord;
