--- a/draw.simple.1.glsl300.vao.html
+++ b/draw.simple.1.glsl300.vao.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    A WebGPU variant <a href="./webgpu1.html">available</a><br/>
+   Migrated also to Automatic Dynamic GLSL 300 Shader Handling:<a href="./draw.simple.1.glsl300.vao.auto.html">WebGL2 GLSL 300</a><br/>
    The WebGL with VAO migrated from <a href="./draw.simple.1.glsl300.html">WebGL</a><br/>
    <div class="sample">
       Simple draw:<br/>
