--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -23,51 +23,15 @@
       </canvas>
    </div>
    <div class="sample">
-      Translate animate 1:<br/>
+      <b>Translate animate 1,<br/> migrated</b>:<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
          <script src="./draw.simple.1.glsl300.vao.auto/animate.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec4 coordinates;
-            uniform   vec4 translation;
-            void main(void)
-            {
-               gl_Position = coordinates + translation;
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            out vec4 fragColor;
-            void main(void)
-            {
-               fragColor = vec4(0.0, 0.0, 0.0, 0.1);
-            }
-         </script>
       </canvas>
    </div>
    <div class="sample">
-      Translate animate 2:<br/>
+      <b>Translate animate 2, <br/> two vao (!!!), migrated:</b><br/>
       <canvas id = "animate second instance" width = "120" height = "120" class="magenta">
-          <script src="./draw.simple.1.glsl300.vao.auto/animate2.js"></script>
-          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
-            #version 300 es
-            in vec4 coordinates;
-            uniform   vec3 translation;
-            void main(void)
-            {
-               gl_Position = coordinates + vec4(translation, 0.0);
-            }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            #version 300 es
-            precision mediump float;
-            out vec4 fragColor;
-            void main(void)
-            {
-               fragColor = vec4(0.0, 0.0, 0.0, 0.1);
-            }
-         </script>
+         <script src="./draw.simple.1.glsl300.vao.auto/animate2.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -92,7 +56,6 @@
             #version 300 es
             in vec4 coordinates;
             in vec3 inputNormal;
-			
             out vec3 nm;
             void main()
             {
@@ -104,11 +67,12 @@
             #version 300 es
             precision mediump float;
             out vec4 fragColor;
+            in  vec3 nm;
 
-            in vec3 nm;
+            const vec3 green = vec3(0.0, 1.0, 0.0);
             void main() 
             {
-              fragColor = vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(nm, 0.9);
+               fragColor = vec4(green, 1.0) * vec4(nm, 0.9);
             }
          </script>
       </canvas>
@@ -124,32 +88,24 @@
             #version 300 es
             in vec4 coordinates;
             in vec3 inputNormal;
-            uniform vec2  lightDirection; // Direction -> right up forward
 
-            out vec2 ld;
-            out vec3 nm;
+            out vec3 nm; //varying
             void main()
             {
                gl_Position = coordinates;
-               ld  = lightDirection;
-               nm = inputNormal;
+               nm  = inputNormal;
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
-            //precision lowp float;
-            //precision highp float;
-
             out vec4 fragColor;
-
-            const vec3  greenColor = vec3(0.0,  1.0,  0.0);
-
-            in vec2 ld;
+            uniform vec2  lightDirection; // Direction -> right up forward
+            const   vec3  greenColor = vec3(0.0,  1.0,  0.0);
             in vec3 nm;
             void main()
             {
-               float prod   =  -dot ( normalize(vec3(ld, -1.0)),   normalize(nm));
+               float prod   =  -dot ( normalize(vec3(lightDirection, -1.0)),   normalize(nm));
                fragColor = vec4 (greenColor * prod,  1.0);
             }
          </script>
