--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -11,27 +11,27 @@
    Older version available here <a href="./draw.simple.1.glsl300.html">WebGL</a><br/>
    A WebGPU variant <a href="./webgpu1.html">available</a><br/>
    <div class="sample">
-      <b>Simple draw<br/>Translate<br/> migrated:</b><br/>
+      Simple draw<br/>Translate<br/>
       <canvas id = "draw0"  width = "120" height = "120" class="blue">
          <script src="./draw.simple.1.glsl300.vao.auto/draw0.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      <b>Animate, 2 progs<br/> P1 Verts dynamic<br/> P2 2 VAOs static<br/> migrated</b>:<br/>
+      Animate, 2 progs<br/> P1 Verts dynamic<br/> P2 2 VAOs static<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
          <script src="./draw.simple.1.glsl300.vao.auto/animate.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      <b>Normals + Colors,<br/> 2 progs, migrated:</b><br/>
+      Normals + Colors,<br/> 2 progs<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/normals_and_colors_2progs.js"></script>
       </canvas>
    </div><br/>
    <div class="sample">
       <br/>
-      <b>Cone TRIANGLE_FAN<br/>
-      (wrong but correct)</br>migrated<br/></b>
+      Cone TRIANGLE_FAN<br/>
+      (wrong but correct)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/triangle_fan.js"></script>
       </canvas>
@@ -40,7 +40,7 @@
       <b>Cone TRIANGLES (correct), <br/>
       Normals simple, smooth gradient<br/>
       Light change direction<br/>
-      Migrated: to merge</b><br/>
+      to merge</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate.js"></script>
       </canvas>
@@ -50,15 +50,14 @@
       Normals simple, no gradient, <br/>
       Tip normal to whole side.<br/>
       Light change direction<br/>
-      Migrated: to be merged</b><br/>
+      to be merged</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate2.js"></script>
       </canvas>
    </div>
    <div class="sample">
-      <b>Cone TRIANGLES (correct), </br>
+      Cone TRIANGLES (correct), </br>
       Normals simple <br/>
-      Migrated</b><br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1.js"></script>
       </canvas>
@@ -67,7 +66,7 @@
       <b>Cone TRIANGLES (correct), </br>
       Geometry <br/>
       Very good investigation<br/>
-      Migrated: to be merged</b><br/>
+      to be merged</b><br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300.vao.auto/cone1_geometry.js"></script>
       </canvas>
